--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,39 @@
+.stepper-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.stepper {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.label {
+  grid-row: 1;
+  grid-column: 1 / span 3;
+  text-align: center;
+}
+
+.decrement {
+  grid-row: 2;
+  grid-column: 1;
+  text-align: center;
+}
+
+.length {
+  grid-row: 2;
+  grid-column: 2;
+  text-align: center;
+}
+
+.increment {
+  grid-row: 2;
+  grid-column: 3;
+  text-align: center;
+}
+
 #timer-section {
     display: flex;
     flex-direction: column;
