--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
         width: 100%;
     }
 }
+
 @media (max-width: 400px) {
     .stepper-container {
         flex-direction: column;
@@ -70,11 +71,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 270px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #timer-controls {
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
 
 #contact-section {
