--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,19 @@
 #wrapper {
     width: 500px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
 }
 
 #main-header {
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .stepper-container {
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 50px;
 }
 
 @media (max-width: 500px) {
@@ -76,12 +80,14 @@
     width: 270px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
 }
 
 #timer-controls {
     display: flex;
     justify-content: center;
     gap: 10px;
+    margin-bottom: 10px;
 }
 
 #contact-section {
