--- a/src/App.css
+++ b/src/App.css
@@ -75,12 +75,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 270px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 50px;
+    border: 5px solid #13353a;
+    border-radius: 50px;
+    width: 200px;
+    margin: 25px auto;
+    padding: 20px;
+}
+
+#timer-label {
+    font-size: 1.9rem;
+}
+
+#time-left {
+    font-size: 3rem;
 }
 
 #timer-controls {
